# RandoLogicScript

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md
ast/: CMakeLists.txt
ast/include/: ast.h  diagnostic.h  output.h
ast/tests/: ast_tests.cpp
console/: CMakeLists.txt  main.cpp
console/tests/: acceptance_ap_tests.cpp  acceptance_helpers.h  acceptance_soh_tests.cpp
docs/: AP-Function-Generation.md  BUILDING.md  LSP-Features.md  RandoLogicScript-Full.md  RandoLogicScript-Overview.md
examples/ap/: ap.py
examples/rls/: enemies.rls  functions.rls  hints.rls  host.rls  kokiri_forest.rls  root.rls
examples/rls/overworld/: kokiri_forest.rls  root.rls
examples/rls/shuffles/: beehives.rls  cows.rls  fairies.rls  fish.rls  freestanding.rls  gold_skulltulas.rls  grass.rls  pots.rls  shops.rls
examples/rls/stdlib/: host.rls
examples/soh/: functions.gen.cpp  functions.gen.h  regions.gen.cpp  regions.gen.h  rls_match.h
examples/soh_ap/: enums.gen.py  functions.gen.py  regions.gen.py
lsp/: CMakeLists.txt  main.cpp
lsp/include/: document_store.h  language_server.h  lsp.h  transport.h
lsp/src/: document_store.cpp  framework.h  json_bind.h  language_server.cpp  language_server_endpoints.cpp  language_server_endpoints_private.h  symbol_support.cpp  symbol_support.h  transport.cpp
lsp/src/endpoints/: completion.cpp  definition.cpp  did_change.cpp  did_close.cpp  did_open.cpp  document_symbol.cpp  exit.cpp  hover.cpp  initialize.cpp  references.cpp  shutdown.cpp  workspace_symbol.cpp
lsp/tests/: document_store_tests.cpp  language_server_tests.cpp  protocol_integration_tests.cpp  symbol_support_tests.cpp  transport_tests.cpp
parser/: CMakeLists.txt
parser/include/: parser.h
parser/src/: builder.cpp  builder.h  grammar.h  parser.cpp
parser/tests/: decl_tests.cpp  expr_tests.cpp  grammar_tests.cpp  parser_tests.cpp
sema/: CMakeLists.txt
sema/include/: sema.h
sema/src/: collect_declarations.cpp  collect_declarations.h  resolve_types.cpp  resolve_types.h  sema.cpp  type_helpers.h  validate_declarations.cpp  validate_declarations.h
sema/tests/: resolve_types_tests.cpp  sema_tests.cpp  validate_declarations_tests.cpp
transpilers/: CMakeLists.txt
transpilers/ap/: CMakeLists.txt
transpilers/ap/include/: ap.h  ap_transpiler.h  section_walk.h
transpilers/ap/src/: ap.cpp  ap_transpiler.cpp  classify_expression.cpp  generate_expression.cpp  generate_expression.h  generate_functions.cpp  generate_regions.cpp
transpilers/ap/tests/: ap_tests.cpp  bridging_tests.cpp  callable_tests.cpp  classify_tests.cpp  diagnostic_tests.cpp  helpers.h  match_tests.cpp  negation_tests.cpp  option_filter_tests.cpp  ternary_tests.cpp
transpilers/soh/: CMakeLists.txt
transpilers/soh/include/: soh.h
transpilers/soh/src/: generate_enemies.cpp  generate_enemies.h  generate_expression.cpp  generate_expression.h  generate_functions.cpp  generate_functions.h  generate_regions.cpp  generate_regions.h  generate_runtime.cpp  generate_runtime.h  rls_match_content.h.in  soh.cpp
transpilers/soh/tests/: generate_enemies_tests.cpp  generate_expression_test.cpp  generate_functions_tests.cpp  generate_regions_tests.cpp  generate_runtime_tests.cpp  helpers.h  rls_match_test.cpp  soh_tests.cpp
transpilers/soh_ap/: CMakeLists.txt
transpilers/soh_ap/include/: soh_ap.h
transpilers/soh_ap/src/: generate_enums.cpp  generate_expression.cpp  generate_functions.cpp  generate_regions.cpp  generate_regions.h  rls_match.py  soh_ap.cpp  soh_enums.cpp  soh_expression.cpp  soh_functions.cpp  soh_regions.cpp
transpilers/soh_ap/tests/: ap_tests.cpp  callable_tests.cpp  function_signature_tests.cpp  helpers.h  host_rewrite_tests.cpp  option_filter_tests.cpp
transpilers/soh_solver/: CMakeLists.txt
transpilers/soh_solver/include/: soh_solver.h
transpilers/soh_solver/src/: soh_solver.cpp
transpilers/soh_solver/tests/: soh_solver_tests.cpp
